--- a/server/static/style.css
+++ b/server/static/style.css
@@ -3,12 +3,11 @@ body {
 	background-color: #f0f0f0;
 	overflow: hidden;
 }
-canvas {
-	border: 1px solid black;
-	background-color: #ffffff;
-	display: block;
+.canvas-container {
+	position: relative;
 	width: 100vw;
 	height: 100vh;
+	background-color: white;
 }
 
 .control-panel {
@@ -20,6 +19,7 @@ canvas {
 	border: 1px solid black;
 	background-color: white;
 	padding: .5rem;
+	z-index: 100;
 }
 
 .control-panel button {
