--- a/apps/demo/style.css
+++ b/apps/demo/style.css
@@ -1,13 +1,95 @@
+:root {
+	--text-primary: #000000;
+	--text-secondary: #999999;
+	--background-primary: #ffffff;
+	--background-secondary: #ebebeb;
+	--accent-color: #089fff;
+	--accent-color-op: rgba(8, 190, 255, 0.1);
+
+	--border-radius: 10px;
+}
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		--text-primary: #ffffff;
+		--text-secondary: #999999;
+		--background-primary: #2f3238;
+		--background-secondary: #4e535c;
+		
+		--accent-color: #126396;
+		--accent-color-op: rgba(8, 190, 255, 0.1);
+	}
+}
+
+button {
+	cursor: pointer;
+}
+
+input,
+select,
+textarea {
+	background-color: var(--background-primary);
+	color: var(--text-primary);
+	margin-top: .5rem;
+}
+
 body {
 	margin: 0;
-	background-color: #f0f0f0;
+	background-color: var(--background-primary);
 	overflow: hidden;
 }
+
 .canvas-container {
 	position: relative;
 	width: 100vw;
 	height: 100vh;
-	background-color: white;
+	background-color: var(--background-primary);
+}
+
+.tooltips {
+	padding: .5rem;
+	border-radius: var(--border-radius);
+	color: var(--text-secondary);
+	background-color: var(--background-primary);
+	font-family: monospace;
+	font-size: 12px;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.tooltips span {
+	display: inline-block;
+	padding: .125rem .25rem;
+	border-radius: 5px;
+	color: var(--background-primary);
+	border: 1px solid var(--text-secondary);
+	background-color: var(--text-secondary);
+}
+
+.tooltips div {
+	margin-right: .5rem;
+}
+
+.tooltips-btn {
+	position: fixed;
+	left: 1rem;
+	bottom: 1rem;
+	z-index: 100;
+}
+
+.tooltips-btn button {
+	font-size: 1rem;
+	color: var(--text-primary);
+	background-color: var(--background-primary);
+	border: 2px solid var(--text-secondary);
+	padding: .5rem;
+	width: 2rem;
+	height: 2rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 1000px;
 }
 
 .control-panel {
@@ -16,8 +98,9 @@ body {
 	bottom: 1rem;
 	top: 1rem;
 	border-radius: 10px;
-	border: 1px solid black;
-	background-color: white;
+	border: 1px solid var(--text-secondary);
+	background-color: var(--background-primary);
+	color: var(--text-primary);
 	padding: .5rem;
 	z-index: 100;
 }
@@ -46,10 +129,17 @@ body {
 	cursor: grab;
 }
 
+dialog:focus {
+	outline: 0;
+}
+
 dialog {
-	border-radius: 10px;
+	border-radius: 5px;
+	border: 1px solid var(--text-secondary);
 	font-family: monospace;
 	min-width: 250px;
+	background-color: var(--background-primary);
+	color: var(--text-primary);
 }
 
 dialog input, dialog select {
@@ -62,13 +152,28 @@ dialog input, dialog select {
 }
 
 dialog button {
-	background-color: #b1f1b1;
+	background-color: var(--accent-color);
 	border: none;
 	border-radius: 5px;
 	padding: .5rem 1rem;
+	color: var(--text-primary);
 }
 
 dialog .btn-container {
 	display: flex;
 	justify-content: flex-end;
+}
+
+.invisible-input {
+	border: none;
+}
+
+.invisible-input:focus {
+	outline: 0;
+}
+
+hr {
+	border: none;
+	height: 1px;
+	background-color: var(--text-secondary);
 }
