--- a/apps/vaev/views/dashboard/dashboard.templ
+++ b/apps/vaev/views/dashboard/dashboard.templ
@@ -1,5 +1,63 @@
 package dashboard
 
 templ Dashboard() {
-	<div>hej</div>
+	<dialog id="create-edge-dialog">
+		<p>Choose connection type</p>
+		<form id="create-edge-form" method="dialog" koppla-submit="createEdge">
+			<label> Type: 
+				<select name="type" koppla-value="edge_type_signal" id="edge-type-select">
+				</select>
+			</label>
+			<div class="btn-container">
+				<button id="close">Create</button>
+			</div>
+		</form>
+	</dialog>
+	<div id="workspace" class="workspace">
+		<div id="canvas-container" class="canvas-container"></div>
+		<div id="control-panel" class="control-panel">
+			<dialog koppla-ref="dialog">
+				<div class="tooltips">
+					<div><span>ctrl</span> + <span>drag</span>: pan</div>
+					<div><span>shift</span> + <span>drag</span>: connect</div>
+					<div><span>del</span>: delete selected</div>
+					<div><span>backspace</span>: delete selected connections</div>
+					<div><span>scroll</span>: zoom</div>
+				</div>
+			</dialog>
+			<div class="control-panel__section">
+				<p>Sorting</p>
+				<div class="control-panel__button-group">
+					<button koppla-click="sort" title="Fruchterman-Reingold esque sorting">
+						<span class="material-symbols-outlined">graph_3</span>
+					</button>
+					<button koppla-click="sort" title="Hierarchy based sorting" disabled>
+						<span class="material-symbols-outlined">graph_1</span>
+					</button>
+				</div>
+			</div>
+			<div class="control-panel__section">
+				<p>Position</p>
+				<div class="control-panel__button-group">
+					<button koppla-click="alignVert">
+						<span class="material-symbols-outlined">align_justify_space_even</span>
+					</button>
+					<button koppla-click="alignHoriz">
+						<span class="material-symbols-outlined">align_space_even</span>
+					</button>
+					<button koppla-click="evenHoriz">
+						<span class="material-symbols-outlined">horizontal_distribute</span>
+					</button>
+					<button koppla-click="evenVert">
+						<span class="material-symbols-outlined">vertical_distribute</span>
+					</button>
+				</div>
+			</div>
+			<div class="control-panel__section control-panel__section--footer">
+				<button koppla-click="openToolTips">
+					<span class="material-symbols-outlined">question_mark</span>
+				</button>
+			</div>
+		</div>
+	</div>
 }
