--- a/apps/vaev/views/layout/page.templ
+++ b/apps/vaev/views/layout/page.templ
@@ -6,9 +6,9 @@ templ Doc(child func() templ.Component) {
 		<head>
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<meta charset="UTF-8">
-			<link href="/public/style.css" rel="stylesheet" />
 			<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 			<link rel="icon" type="image/png" href="/public/favicon.ico">
+			<link rel="stylesheet" href="/dist/style.css" />
 			<title>Vaev</title>
 		</head>
 		<body>
@@ -19,7 +19,7 @@ templ Doc(child func() templ.Component) {
 			>
 			@child()
 			</div>
-			<script type="module" src="/public/index.js"></script>
+			<script type="module" src="/dist/index.js"></script>
 		</body>
 	</html>
 }
