--- a/apps/vaev/views/dashboard/dashboard.templ
+++ b/apps/vaev/views/dashboard/dashboard.templ
@@ -1,32 +1,16 @@
 package dashboard
 
-templ Dashboard() {
-	<dialog id="create-edge-dialog">
-		<p>Choose connection type</p>
-		<form id="create-edge-form" method="dialog" koppla-submit="createEdge">
-			<label> Type: 
-				<select name="type" koppla-value="edge_type_signal" id="edge-type-select">
-				</select>
-			</label>
-			<div class="btn-container">
-				<button id="close">Create</button>
-			</div>
-		</form>
-	</dialog>
-	<div id="workspace" class="workspace">
+templ Main() {
+	<div id="workspace" 
+		data-signals-driver="null"
+		data-signals-edge-types="null"
+		data-signals="{driver: null, edgeTypes: []}"
+		data-on-load=" $driver = window.canvas_gui; $driver.on('run', (e) => $edgeTypes = $driver.graph.config.edge_types)"
+		class="workspace"
+	>
 		<div id="canvas-container" class="canvas-container"></div>
 		<div id="control-panel" class="control-panel">
-			<dialog koppla-ref="dialog">
-				<div class="tooltips">
-					<div><span>ctrl</span> + <span>drag</span>: pan</div>
-					<div><span>shift</span> + <span>drag</span>: connect</div>
-					<div><span>del</span>: delete selected</div>
-					<div><span>backspace</span>: delete selected connections</div>
-					<div><span>scroll</span>: zoom</div>
-				</div>
-			</dialog>
-			<div class="control-panel__section">
-				<p>Sorting</p>
+			@ControlPanelSection("Sorting") {
 				<div class="control-panel__button-group">
 					<button koppla-click="sort" title="Fruchterman-Reingold esque sorting">
 						<span class="material-symbols-outlined">graph_3</span>
@@ -35,9 +19,8 @@ templ Dashboard() {
 						<span class="material-symbols-outlined">graph_1</span>
 					</button>
 				</div>
-			</div>
-			<div class="control-panel__section">
-				<p>Position</p>
+			}
+			@ControlPanelSection("Position") {
 				<div class="control-panel__button-group">
 					<button koppla-click="alignVert">
 						<span class="material-symbols-outlined">align_justify_space_even</span>
@@ -52,12 +35,54 @@ templ Dashboard() {
 						<span class="material-symbols-outlined">vertical_distribute</span>
 					</button>
 				</div>
-			</div>
-			<div class="control-panel__section control-panel__section--footer">
-				<button koppla-click="openToolTips">
-					<span class="material-symbols-outlined">question_mark</span>
-				</button>
-			</div>
+			}
+			@Footer()
 		</div>
+		<dialog
+			id="create-edge-dialog"
+			data-ref="edge-form"
+			data-signals-edges="[]"
+			data-on-load="
+				$driver.on('create:connections', (e) => {
+					$edges = e
+					$edge-form.showModal()
+				});
+			"
+		>
+			<p>Choose connection type</p>
+			<form id="create-edge-form" method="dialog" koppla-submit="createEdge">
+				<label> Type: 
+					<select name="type" koppla-value="edge_type_signal" id="edge-type-select">
+					</select>
+				</label>
+				<div class="btn-container">
+					<button id="close">Create</button>
+				</div>
+			</form>
+		</dialog>
+	</div>
+}
+
+templ Footer() {
+	<div class="control-panel__section control-panel__section--footer">
+		<dialog data-ref="tooltips">
+			<div class="tooltips">
+				<div><span>ctrl</span> + <span>drag</span>: pan</div>
+				<div><span>shift</span> + <span>drag</span>: connect</div>
+				<div><span>del</span>: delete selected</div>
+				<div><span>backspace</span>: delete selected connections</div>
+				<div><span>scroll</span>: zoom</div>
+			</div>
+		</dialog>
+		<button data-on-click='$tooltips.showModal()' koppla-click="openToolTips">
+		<span class="material-symbols-outlined">question_mark</span>
+		</button>
+	</div>
+}
+
+templ ControlPanelSection(title string) {
+	<div class="control-panel__section">
+		<p>{title}</p>
+		{ children... }
 	</div>
 }
