--- a/apps/vaev/views/layout/page.templ
+++ b/apps/vaev/views/layout/page.templ
@@ -19,6 +19,7 @@ templ Doc(child func() templ.Component) {
 			>
 			@child()
 			</div>
+			<div id="toaster" class="toaster"></div>
 			<script type="module" src="/dist/index.js"></script>
 		</body>
 	</html>
