--- a/apps/vaev/frontend/css/style.css
+++ b/apps/vaev/frontend/css/style.css
@@ -5,11 +5,37 @@
 	--background-secondary: #ebebeb;
 	--background-accent: #efefef;
 	--accent-color: #089fff;
-	--accent-color-op: rgba(8, 190, 255, 0.1);
+	--accent-color-op: #089fff10;
 
 	--border-radius: 10px;
+	--border-radius-small: 5px;
 
 	--small-border: .5px solid var(--text-secondary);
+
+	--color-fail: #a84c32;
+	--color-success: #73a832;
+	--color-warn: #a8a032;
+
+	--font-family-headings: 'Lora', serif;
+	--font-family-body: 'Open Sans', sans-serif;
+
+	--base-font-size: 14px;
+	--line-height-body: 1.6;
+	--line-height-headings: 1.3;
+
+	--letter-spacing-headings: 0.025em;
+	--letter-spacing-body: 0.01em;
+
+	--gap: 1rem;
+	--gap-small: .5rem;
+	--gap-1: .25rem;
+	--gap-2: .5rem;
+	--gap-3: .75rem;
+	--gap-4: 1rem;
+	--gap-5: 1.25rem;
+	--gap-6: 1.50rem;
+	--gap-7: 1.75rem;
+	--gap-8: 2rem;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,10 +45,20 @@
 		--background-primary: #1e2024;
 		--background-secondary: #2f3238;
 		--background-accent: #4e535c;
-		
+
 		--accent-color: #126396;
-		--accent-color-op: rgba(8, 190, 255, 0.1);
+		--accent-color-op: #12639610;
 	}
+}
+
+body {
+	font-family: var(--font-family-body);
+	font-size: var(--base-font-size);
+	line-height: var(--line-height-body);
+	letter-spacing: var(--letter-spacing-body);
+	background-color: var(--background-primary);
+	margin: 0;
+	overflow: hidden;
 }
 
 button {
@@ -34,12 +70,76 @@ select,
 textarea {
 	background-color: var(--background-primary);
 	color: var(--text-primary);
-	margin-top: .5rem;
+	padding: .5rem;
+	border-radius: var(--border-radius-small);
+	border: var(--small-border);
+	margin: 0;
+	box-sizing: border-box;
 }
 
-body {
-	margin: 0;
-	overflow: hidden;
+input, label {
+	display: block;
+	width: 100%;
+}
+
+.btn {
+	background-color: var(--background-accent);
+	padding: .5rem;
+	border-radius: var(--border-radius-small);
+	border: var(--small-border);
+	color: var(--text-primary);
+}
+
+.login-page {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	color: var(--text-primary);
+}
+
+.login-page form {
+	background-color: var(--background-secondary);
+	border: var(--small-border);
+	padding: var(--gap-6);
+	border-radius: var(--border-radius-small);
+	min-width: 400px;
+	display: flex;
+	flex-direction: column;
+	gap: var(--gap-4);
+}
+
+.login-page form label {
+	display: inline-block;
+}
+
+.toaster {
+	position: fixed;
+	bottom: 1rem;
+	left: 1rem;
+	right: 1rem;
+	display: flex;
+	flex-direction: column;
+	gap: var(--gap);
+	justify-content: flex-end;
+}
+
+.toaster__msg {
+	opacity: 0;
+	display: inline;
+	align-self: flex-end;
+	padding: 1rem;
+	border-radius: var(--border-radius-small);
+	animation: slide-up .2s cubic-bezier(0.645, 0.045, 0.355, 1) forwards;
+}
+
+.toaster__msg--error {
+	background-color: var(--color-fail);
+	color: var(--text-primary);
+}
+
+select {
+	cursor: pointer;
 }
 
 .workspace {
@@ -65,7 +165,6 @@ body {
 	border-radius: var(--border-radius);
 	color: var(--text-secondary);
 	background-color: var(--background-primary);
-	font-family: monospace;
 	font-size: 12px;
 	display: flex;
 	flex-direction: column;
@@ -75,7 +174,7 @@ body {
 .tooltips span {
 	display: inline-block;
 	padding: .125rem .25rem;
-	border-radius: 5px;
+	border-radius: var(--border-radius-small);
 	color: var(--background-primary);
 	border: 1px solid var(--text-secondary);
 	background-color: var(--text-secondary);
@@ -116,7 +215,6 @@ body {
 	flex-direction: column;
 	height: 100%;
 	box-sizing: border-box;
-	font-family: monospace;
 	border-left: var(--small-border);
 }
 
@@ -131,7 +229,7 @@ body {
 	color: var(--text-primary);
 	transition: all .1s ease-in-out;
 	border: 1px solid var(--text-secondary);
-	border-radius: 5px;
+	border-radius: var(--border-radius-small);
 }
 
 .control-panel button span {
@@ -175,7 +273,6 @@ body {
 }
 
 .node-draggable {
-	font-family: monospace;
 	padding: 1rem;
 	display: flex;
 	justify-content: center;
@@ -191,9 +288,8 @@ dialog:focus {
 }
 
 dialog {
-	border-radius: 5px;
+	border-radius: var(--border-radius-small);
 	border: 1px solid var(--text-secondary);
-	font-family: monospace;
 	min-width: 250px;
 	background-color: var(--background-primary);
 	color: var(--text-primary);
@@ -201,7 +297,7 @@ dialog {
 
 dialog input, dialog select {
 	padding: .5rem;
-	border-radius: 5px;
+	border-radius: var(--border-radius-small);
 	display: block;
 	margin-bottom: .5rem;
 	width: 100%;
@@ -211,7 +307,7 @@ dialog input, dialog select {
 dialog button {
 	background-color: var(--accent-color);
 	border: none;
-	border-radius: 5px;
+	border-radius: var(--border-radius-small);
 	padding: .5rem 1rem;
 	color: var(--text-primary);
 }
@@ -233,5 +329,16 @@ hr {
 	border: none;
 	height: 1px;
 	background-color: var(--text-secondary);
+}
+
+@keyframes slide-up {
+from {
+	opacity: 0;
+	transform: translateY(20px);
+}
+to {
+	opacity: 1;
+	transform: translateY(0px);
+}
 }
 
