--- a/apps/vaev/views/graph/graph.templ
+++ b/apps/vaev/views/graph/graph.templ
@@ -112,9 +112,11 @@ templ Footer() {
 				<div><span>scroll</span>: zoom</div>
 			</div>
 		</dialog>
-		<button data-on-click='$tooltips.showModal()' koppla-click="openToolTips">
-		<span class="material-symbols-outlined">question_mark</span>
-		</button>
+		<div class="control-panel__button-group">
+			<button data-on-click='$tooltips.showModal()' koppla-click="openToolTips">
+				<span class="material-symbols-outlined">question_mark</span>
+			</button>
+		</div>
 	</div>
 }
 
