--- a/apps/vaev/views/auth/login.templ
+++ b/apps/vaev/views/auth/login.templ
@@ -1,6 +1,8 @@
 package auth
 
-templ Login() {
+import "fmt"
+
+templ Login(redirect_to string) {
 	<div class="login-page">
 		<form id="login-form">
 			<label>Username
@@ -9,7 +11,10 @@ templ Login() {
 			<label>Password
 				<input name="password" value="" type="password" value="" />
 			</label>
-			<button class="btn" data-on-click="@post('/auth/login', {contentType: 'form'})">
+			<button
+				class="btn" 
+				data-on-click={fmt.Sprintf("@post('%s', {contentType: 'form'})", R_VALIDATE + "?next=" + redirect_to)}
+			>
 				Login
 			</button>
 		</form>
