feat: added support for resource injection in doc component

--- a/apps/vaev/frontend/css/style.css
+++ b/apps/vaev/frontend/css/style.css
@@ -59,6 +59,7 @@ body {
 	background-color: var(--background-primary);
 	margin: 0;
 	overflow: hidden;
+	color: var(--text-primary);
 }
 
 button {
