--- a/apps/vaev/views/auth/user_card.templ
+++ b/apps/vaev/views/auth/user_card.templ
@@ -42,7 +42,12 @@ templ userAvatar(letter string) {
 
 templ userCardOptions() {
 	@options(){
-		<button data-on-click="@post('/auth/logout')">Log out</button>
+		<a href="/dashboard/projects">
+			<span class="material-symbols-outlined">cases</span>Projects
+		</a>
+		<button data-on-click="@post('/auth/logout')">
+			<span class="material-symbols-outlined text-red">logout</span>Log out
+		</button>
 	}
 }
 
